src/components/Chat/Users/Users.css
@import url("../../../index.css");

.user-container-dark,
.user-container-light {
  border-radius: var(--roundness);
  display: flex;
  height: 50px;
  width: 100%;
  place-self: center;
  align-items: center;
  position: relative;
}

.user-container-dark {
  background-color: var(--primary);
}

.user-container-light {
  border-radius: 10px;
  background-color: var(--secondary);
}

.user-container-button {
  background-color: transparent;
  display: flex;
  width: 100%;
  padding: 5px;
  height: 100%;
  place-self: center;
  align-items: center;
  gap: 10px;
}

.username {
  flex-basis: 100%;
  text-align: start;
  display: inline;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: black;
}

.bot-call {
  font-size: x-small;
  color: var(--bg);
}

.stacked-div {
  flex-basis: 100%;
  display: inline;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: flex;
  flex-direction: column;
}

.role {
  display: inline;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  flex-basis: 100px;

  font-size: x-small;
  border-radius: 50px;
  padding: 5px;
  background-color: green;
  border: 1px solid lightgreen;
}

.user-panel-div {
  z-index: 1;
  background-color: var(--bg);
  width: auto;
  height: auto;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  place-items: center;
  gap: 10px;
  padding: 50px;
  margin-top: 30px !important;
  box-shadow: 0px 0px 10px var(--primary);
  overflow: hidden;
}

.user-panel-background {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  -webkit-filter: blur(75px);
  -moz-filter: blur(75px);
  -o-filter: blur(75px);
  -ms-filter: blur(75px);
  filter: blur(50px);
  z-index: -1;
}

.user-panel-background-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  user-select: none;
}

.user-panel-username {
  font-weight: bold;
  font-size: 30px;
  width: 250px;
  text-align: center;
  word-wrap: break-word;
  margin: 0;
}

.user-panel-profile-picture {
  aspect-ratio: 1/1;
  border-radius: 100%;
  border: 3px;
  border-style: solid;
  border-color: var(--primary);
  width: 150px;
  height: 150px;
  background-color: var(--primary);
}

.user-panel-role {
  display: inline;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  border-radius: 50px;
  padding: 5px;
  background-color: green;
  border: 1px solid lightgreen;
}

